@@ -2,6 +2,12 @@
 
 	* DBSoap.h
 	* DBSoap.m
+	Add class methods for returning login  URLs.
+
+2014-10-10 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.h
+	* DBSoap.m
 	Add sending query size in query/queryMore
 
 2014-09-09 Riccardo Mottola <rm@gnu.org>
